# Overtimer

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
overtimer/: UI.py  __main__.py  config_crud.py  core.py  formaters.py  ov.pyw  xl_parsers.py
overtimer/templates/: template.docx
templates/: template.docx
tests/: test_configCRUD.py  test_core.py  test_formatter.py  test_parsers.py
tests/fixtures/: orders.xlsx  orders2.xlsx  persons.xls  settings.ini  template.docx
