[tool.poetry]
name = "overtimer"
version = "0.1.0"
description = ""
authors = ["Angekok <angekok@mail.ru>"]
packages = [
  { include = "overtimer" },
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
docxtpl = "^0.15.2"
DateTime = "^4.3"
configparser = "^5.2.0"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
pyinstaller = "3.6"
pytest-cov = "^3.0.0"
wily = "^1.20.0"

[tool.poetry.scripts]
overtimer = "overtimer.overtimer:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
